--- a/rakefile
+++ b/rakefile
@@ -1,7 +1,9 @@
-TARGET = :xml
+PACKAGE = 'corto/fmt/xml'
 
+NOCORTO = true
+USE_PACKAGE = ["corto"]
 INCLUDE = ["/usr/include/libxml2"]
 LIB = ["xml2"]
 CFLAGS = ["-Wunused-parameter"]
 
-require "#{ENV['CORTO_BUILD']}/component"
+require "#{ENV['CORTO_BUILD']}/package"
