--- a/ext/project.json
+++ b/ext/project.json
@@ -4,6 +4,7 @@
   "value" : {
     "description" : "XML file extension",
     "version" : "1.0.0",
-    "dependencies" : ["corto/fmt/xml"]
+    "dependencies" : ["corto/fmt/xml"],
+    "noapi": true
   }
 }
