Organize extensions in 'driver' scope

--- a/ext/project.json
+++ b/ext/project.json
@@ -1,10 +1,10 @@
 {
-  "id" : "corto/ext/xml",
+  "id" : "driver/ext/xml",
   "type" : "package",
   "value" : {
     "description" : "XML file extension",
     "version" : "1.0.0",
-    "dependencies" : ["corto/fmt/xml"],
+    "dependencies" : ["driver/fmt/xml"],
     "noapi": true
   }
 }
